--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,8 @@
 
 /* Your CSS Code here. */
-p{
-	padding:50px lightblue;
-}
-
 div{
+	padding:50px;
+	background-color:lightblue;
 	border:15px solid blue;
 	margin:20px;
 }
