--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,9 @@
 
 /* Your CSS Code here. */
 div{
+	width:300px;
 	padding:50px;
-	/*background-color:lightblue;*/
+	background-color:lightblue;
 	border:15px solid blue;
 	margin:20px;
 }
